--- a/Cheroto.Web/MyMasterPage.Master
+++ b/Cheroto.Web/MyMasterPage.Master
@@ -10,6 +10,7 @@
     <title></title>
     <asp:ContentPlaceHolder ID="ContentPlaceHolderHead" runat="server">
     </asp:ContentPlaceHolder>
+    <link href = "style.css" type = "text/css" rel = "stylesheet" > 
 </head>
 <body>
     <form id="form1" runat="server">
