--- a/Cheroto.Web/MyMasterPage.Master
+++ b/Cheroto.Web/MyMasterPage.Master
@@ -7,15 +7,16 @@
 
 <html>
 <head runat="server">
-    <title></title>
+    <title>Cheroto's WebStore!</title>
     <asp:ContentPlaceHolder ID="ContentPlaceHolderHead" runat="server">
     </asp:ContentPlaceHolder>
     <link href = "style.css" type = "text/css" rel = "stylesheet" > 
 </head>
 <body>
+    <p>This is a test</p>
     <form id="form1" runat="server">
         <uc1:Menu runat="server" ID="Menu" />
-        <div>
+        <div id="body">
             <asp:ContentPlaceHolder ID="ContentPlaceHolderBody" runat="server">
             </asp:ContentPlaceHolder>
         </div>
