--- a/Cheroto.Web/style.css
+++ b/Cheroto.Web/style.css
@@ -1,1 +1,39 @@
-﻿
+﻿* {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+}
+
+body {
+    background-image: url("https://pixabay.com/get/e832b5082ff3073ecd1f4004e1444e91e76ae3d110b3184094f1c371/background-1747776.jpg");
+    margin-bottom: 2em;
+
+}
+
+.menu-region a:hover, a:visited, a:link, a:active {
+    color: white;
+    text-decoration: none;
+}
+
+.menu-region {
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    background-color: black;
+    color: white;
+}
+
+.menu-button {
+    padding: 15px;
+    letter-spacing: 0.1em;
+}
+
+.menu-button:hover{
+    background-color: dimgray;
+}
+
+table{
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2em;
+}
